--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ a {
 }
 
 a:hover {
-  color: #067ded;
+  color: #282e9e;
   text-decoration: none;
 }
 
@@ -39,7 +39,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 0;
 }
 .back-to-top:hover {
-  background: #0678e3;
+  background: #282e9e;
   color: #fff;
 }
 .back-to-top.active {
@@ -1015,7 +1015,7 @@ section {
   border-radius: 50px;
 }
 .contact .php-email-form button[type=submit]:hover {
-  background: #0678e3;
+  background: #282e9e;
 }
 @-webkit-keyframes animate-loading {
   0% {
@@ -1076,7 +1076,7 @@ section {
   transition: 0.3s;
 }
 #footer .social-links a:hover {
-  background: #0678e3;
+  background: #282e9e;
   color: #fff;
   text-decoration: none;
 }
