--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,15 +179,16 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 .nav-menu a:hover, .nav-menu .active, .nav-menu .active:focus, .nav-menu li:hover > a {
-  color: #fff;
-  background: #5d65ff;
+  color: #5d65ff;
+  background: #3a3a3a;
+  /* background: #5d65ff; */
 }
 .nav-menu a:hover span, .nav-menu .active span, .nav-menu .active:focus span, .nav-menu li:hover > a span {
-  color: #fff;
+  color: #5d65ff;
 }
 .nav-menu a:hover, .nav-menu li:hover > a {
   width: 100%;
-  color: #fff;
+  color: #5d65ff;
 }
 .nav-menu a:hover span, .nav-menu li:hover > a span {
   display: block;
@@ -232,7 +233,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right no-repeat;
+  background: url("../img/home-bg.png") top right no-repeat;
   background-size: cover;
   position: relative;
 }
@@ -242,10 +243,17 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-.owndiv {
+.login-signup-div {
   position: relative;
-  top: -250px;
-  left: 1200px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  padding: 20px;
+}
+@media screen and (max-width: 768px) {
+  .login-signup-div {
+    padding: 40px 10px 0 0;
+  }
 }
 .own-checkbox-div {
   display: flex;
@@ -258,6 +266,16 @@ h1, h2, h3, h4, h5, h6 {
 input::placeholder {
   font: 20px/3 sans-serif;
 }
+
+#mrg-tp {
+  margin-top: 100px;
+}
+@media screen and (min-width: 1024px) {
+  #mrg-tp {
+    margin-top: 100px;
+  }
+}
+
 /* Animation */
 .slide-left {
   animation: 3s slide-left;
