--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,16 +179,16 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 .nav-menu a:hover, .nav-menu .active, .nav-menu .active:focus, .nav-menu li:hover > a {
-  color: #5d65ff;
+  color: #5d65ff; /* #fff */
   background: #3a3a3a;
   /* background: #5d65ff; */
 }
 .nav-menu a:hover span, .nav-menu .active span, .nav-menu .active:focus span, .nav-menu li:hover > a span {
-  color: #5d65ff;
+  color: #5d65ff; /* #fff */
 }
 .nav-menu a:hover, .nav-menu li:hover > a {
   width: 100%;
-  color: #5d65ff;
+  color: #5d65ff; /* #fff */
 }
 .nav-menu a:hover span, .nav-menu li:hover > a span {
   display: block;
