--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,16 +179,15 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 .nav-menu a:hover, .nav-menu .active, .nav-menu .active:focus, .nav-menu li:hover > a {
-  color: #5d65ff; /* #fff */
-  background: #3a3a3a;
-  /* background: #5d65ff; */
+  color: #fff; /* #fff */
+  background: #5d65ff;
 }
 .nav-menu a:hover span, .nav-menu .active span, .nav-menu .active:focus span, .nav-menu li:hover > a span {
-  color: #5d65ff; /* #fff */
+  color: #fff; /* #fff */
 }
 .nav-menu a:hover, .nav-menu li:hover > a {
   width: 100%;
-  color: #5d65ff; /* #fff */
+  color: #fff; /* #fff */
 }
 .nav-menu a:hover span, .nav-menu li:hover > a span {
   display: block;
@@ -233,7 +232,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/home-bg.png") top right no-repeat;
+  background: url("../img/new-bg.png") top right no-repeat;
   background-size: cover;
   position: relative;
 }
@@ -274,6 +273,21 @@ input::placeholder {
   #mrg-tp {
     margin-top: 100px;
   }
+}
+
+.brand-title {
+  color: #252525;
+  font-family: 'Lato', sans-serif;
+}
+.brand-title-a {
+  color: #5d65ff;
+}
+
+.gotoslidericon {
+  background-color: #5d65ff;
+  border-radius: 50px;
+  color: #fff;
+  font-size: 30px;
 }
 
 /* Animation */
@@ -401,7 +415,7 @@ section {
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
-  color: #45505b;
+  color: #5d65ff;
 }
 .section-title h2::before {
   content: "";
@@ -419,7 +433,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #5d65ff;
+  background: #45505b;
   bottom: 0;
   left: calc(50% - 20px);
 }
