--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,6 +275,38 @@ input::placeholder {
   }
 }
 
+.hero-title-main {
+  font-size: 100px;
+  padding-bottom: 18px;
+}
+.hero-title-sub {
+  font-size: 50px;
+}
+@media screen and (max-width: 685px) {
+  .hero-title-main {
+    font-size: 40px !important;
+  }
+  .hero-title-sub {
+    font-size: 20px !important;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero-title-main {
+    font-size: 55px !important;
+  }
+  .hero-title-sub {
+    font-size: 30px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .hero-title-main {
+    font-size: 75px !important;
+  }
+  .hero-title-sub {
+    font-size: 50px;
+  }
+}
+
 .brand-title {
   color: #252525;
   font-family: 'Lato', sans-serif;
@@ -291,7 +323,7 @@ input::placeholder {
 }
 
 .down-arrow-icon-top-align {
-  margin-top: 150px;
+  margin-top: 120px;
 }
 @media screen and (max-width: 768px) {
   .down-arrow-icon-top-align {
@@ -362,10 +394,9 @@ input::placeholder {
 }
 #hero h1 {
   margin: 0;
-  font-size: 64px;
   font-weight: 700;
   line-height: 56px;
-  color: #45505b;
+  color: #5d65ff;
 }
 #hero p {
   color: #45505b;
@@ -396,7 +427,7 @@ input::placeholder {
     text-align: center;
   }
   #hero h1 {
-    font-size: 32px;
+    /* font-size: 32px; */
     line-height: 36px;
   }
   #hero p {
